--- a/defiantlabs.net/config/dev/config.toml
+++ b/defiantlabs.net/config/dev/config.toml
@@ -82,8 +82,8 @@ custom_css = ["static/css/custom.css"]
     enableGoogleMaps = true
     googleMapsApiKey = "AIzaSyAv7Sza8NSp9_l_g8G2vlo0H4ydEPn_2jY"
 
-    latitude = "-12.043333"
-    longitude = "-77.028333"
+    latitude = "38.80983086567146"
+    longitude = "-77.055247751834"
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
     style = "dark"
@@ -122,8 +122,8 @@ custom_css = ["static/css/custom.css"]
     enableRecaptchaInContactForm = false
     googleRecaptchaKey = "site_key_for_google_recaptcha"
 
-    about_us = "<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>"
-    copyright = "Copyright (c) 2015 - 2016, YourCompany; all rights reserved."
+    about_us = "<p>Building tools in the cosmos.</p>"
+    copyright = "Copyright (c) 2022, DefiantLabs; all rights reserved."
 
     # Format dates with Go's time formatting
     date_format = "January 2, 2006"
@@ -137,15 +137,7 @@ custom_css = ["static/css/custom.css"]
     logo = "img/dl_logo_1m.png"
     logo_small = "img/logo-small.png"
     contact_url = "/contact"
-    address = """<p class="text-uppercase"><strong>Universal Ltd.</strong>
-        <br>13/25 New Avenue
-        <br>Newtown upon River
-        <br>45Y 73J
-        <br>England
-        <br>
-        <strong>Great Britain</strong>
-      </p>
-      """
+    address = ""
 
 [permalinks]
     blog = "/blog/:year/:month/:day/:filename/"
