--- a/defiantlabs.net/data/projects/tax.yaml
+++ b/defiantlabs.net/data/projects/tax.yaml
@@ -1,5 +1,5 @@
 weight: 1
 name: "Tax Tool"
 icon: "fas fa-landmark"
-url: "https://www.cnn.com"
-description: "Seamlessly connect your wallet and which gives you access to your transaction history and reporting tools and a portfolio management section, all in a single dashboard"
+url: ""
+description: "Defiant LAbs develops tax software that provides CSV formatted spreadsheets for the Cosmos Ecosystem. The CSV data includes taxable information and it's compatible with popular tax software such as Accointing and Turbo Tax."
