--- a/defiantlabs.net/data/features/validators.yaml
+++ b/defiantlabs.net/data/features/validators.yaml
@@ -1,5 +1,5 @@
 weight: 4
 name: "Validators"
-icon: "far fa-envelope"
+icon: "fas fa-server"
 url: ""
 description: "Advantage old had otherwise sincerity dependent additions. It in adapted natural hastily is justice. Six draw you him full not mean evil."
