--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 ######################## default configuration ####################
 baseurl = "http://dev.defiant-labs.net"
 languageCode = "en-us"
-title = "Defiant Labs - Tools for Cosmos Ecosystem"
+title = "Defiant Labs"
 theme = "orbitor-hugo"
 themesDir = "themes/"
 summaryLength = "10"
@@ -132,8 +132,8 @@ weight = 5
 
 #################### default parameters ################################
 [params]
-logo = "images/logo-small.png"
-logo_white = "images/defiant.png"
+logo = ""
+logo_white = ""
 # Meta data
 description = "Defiant Labs - Building tools in the cosmos"
 author = "Themefisher"
