--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseurl: 'https://defiant-labs.net'
+baseurl: 'https://defiantlabs.net'
 languageCode: en-us
 title: Defiant Labs
 theme: orbitor-hugo
